--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header>
      
     <nav>
-      <h1>Bryan Corro</h1>
+      <h1>Bryan Corro - HTML/CSS/JS</h1>
       <ul>
         <li><button>Inicio</button></li>
         <li><button>Sobre Mi</button></li>
@@ -53,8 +53,6 @@
          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
            Placeat deserunt, saepe, ad cumque est amet nisi aspernatur 
             magnam. </p><br>
-         <button>Contratame</button>
-         <button>Descargar CV</button>
        </article>
     </div>
     
@@ -80,21 +78,18 @@
            Aperiam dolore, est obcaecati.
         </p>
         <br>
-        <button>Read More</button>
       </div><br>
       <div class="card">
         <img src="" alt=""><br>
         <h2>Office</h2><br>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
            Aperiam dolore, est obcaecati.</p><br>
-        <button>Read More</button>
       </div><br>
       <div class="card">
         <img src="" alt=""><br>
         <h2>Diseño</h2><br>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
            Aperiam dolore, est obcaecati.</p><br>
-        <button>Read More</button>
       </div>
     </div>
   </div>
