--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </section>
     
     <div class="largeCard">
-       <img src="https://assets.capitalfm.com/2015/21/the-vamps-tristan-evans-instagram-1432909047-view-0.png" alt="">
+       <img src="https://media.discordapp.net/attachments/824632713503834142/1133150549869613087/image.png?width=642&height=702" alt="">
        <article>
          <h2>Sobre Mi</h2>
          <p>Desarrollador & Diseñador</p><br>
