--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header>
      
     <nav>
-      <h1>Carlos Corro - HTML/CSS/JS</h1>
+      <h1>Bryan Corro - HTML/CSS/JS</h1>
       <ul>
         <li><button>Inicio</button></li>
         <li><button>Sobre Mi</button></li>
