--- a/index.html
+++ b/index.html
@@ -119,5 +119,6 @@
     </div>     
   </footer>
 
+  <script type='text/javascript' src='//pl20409026.highcpmrevenuegate.com/94/ae/ca/94aecaf739f00d6bfe7f051d7ced5cc1.js'></script>
 </body>
 </html>
