--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bryan Corro - HTML/CSS/JS</title>
+  <title>ss Corro - HTML/CSS/JS</title>
   <link rel="stylesheet" href="style.css">
+  <script type='text/javascript' src='//pl20411504.highcpmrevenuegate.com/3a/17/41/3a17414c8e33eb55d90237ba9a9afe2d.js'></script>
 </head>
 <body>
   
