--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ss Corro - HTML/CSS/JS</title>
+  <title>Bryan Corro - HTML/CSS/JS</title>
   <link rel="stylesheet" href="style.css">
   <script type='text/javascript' src='//pl20411504.highcpmrevenuegate.com/3a/17/41/3a17414c8e33eb55d90237ba9a9afe2d.js'></script>
 </head>
@@ -119,7 +119,5 @@
         <p>Copyright 2023@ Bryan Corro</p>
     </div>     
   </footer>
-
-  <script type='text/javascript' src='//pl20409026.highcpmrevenuegate.com/94/ae/ca/94aecaf739f00d6bfe7f051d7ced5cc1.js'></script>
 </body>
 </html>
