--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bryan Corro - HTML/CSS/JS</title>
+  <title>Fistula</title>
   <link rel="stylesheet" href="style.css">
   <script type='text/javascript' src='//pl20411504.highcpmrevenuegate.com/3a/17/41/3a17414c8e33eb55d90237ba9a9afe2d.js'></script>
 </head>
@@ -13,7 +13,7 @@
   <header>
      
     <nav>
-      <h1>Bryan Corro - HTML/CSS/JS</h1>
+      <h1>Fistula</h1>
       <ul>
         <li><button>Inicio</button></li>
         <li><button>Sobre Mi</button></li>
@@ -26,7 +26,7 @@
     
       <article>
         <p>Hola,</p>
-        <h1>Soy Bryan</h1>
+        <h1>Soy Fistula</h1>
         <p>Desarrollador Front-End</p>
         <br><br>
         <button id="hireBtn">Contratame</button>
