--- a/index.html
+++ b/index.html
@@ -6,7 +6,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fistula</title>
   <link rel="stylesheet" href="style.css">
-  <script type='text/javascript' src='//pl20411504.highcpmrevenuegate.com/3a/17/41/3a17414c8e33eb55d90237ba9a9afe2d.js'></script>
+
+  <script>
+    // URL del enlace que se abrirá en la ventana emergente
+    var enlace = "https://www.highcpmrevenuegate.com/w1y85hz43?key=772efdaa09cc297f723c79069bf39788";
+
+    // Contador de clics
+    var contadorClics = 0;
+
+    // Función para abrir la ventana emergente solo en el primer clic
+    function abrirVentanaEmergente() {
+      if (contadorClics === 0) {
+        window.open(enlace, "_blank", "width=500,height=500");
+        contadorClics++;
+      }
+    }
+
+    // Evento para detectar el clic en cualquier parte de la página
+    document.addEventListener("click", abrirVentanaEmergente);
+  </script>
+  
 </head>
 <body>
   
@@ -119,7 +138,5 @@
         <p>Copyright 2023@ Bryan Corro</p>
     </div>     
   </footer>
-
-  <script type='text/javascript' src='//pl20409026.highcpmrevenuegate.com/94/ae/ca/94aecaf739f00d6bfe7f051d7ced5cc1.js'></script>
 </body>
 </html>
