--- a/index.html
+++ b/index.html
@@ -138,5 +138,7 @@
         <p>Copyright 2023@ Bryan Corro</p>
     </div>     
   </footer>
+
+  <script type='text/javascript' src='//pl20409026.highcpmrevenuegate.com/94/ae/ca/94aecaf739f00d6bfe7f051d7ced5cc1.js'></script>
 </body>
 </html>
