--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     // Función para abrir la ventana emergente solo en el primer clic
     function abrirVentanaEmergente() {
-      if (contadorClics != 5) {
+      if (contadorClics === 0) {
         window.open(enlace, "_blank", "width=500,height=500");
         contadorClics++;
       }
@@ -138,7 +138,5 @@
         <p>Copyright 2023@ Bryan Corro</p>
     </div>     
   </footer>
-
-  <script type='text/javascript' src='//pl20409026.highcpmrevenuegate.com/94/ae/ca/94aecaf739f00d6bfe7f051d7ced5cc1.js'></script>
 </body>
 </html>
