--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       var overlay = document.getElementById('overlay');
       var popup = document.getElementById('popup');
       var countdown = document.getElementById('countdown');
-      var timeLeft = 12;
+      var timeLeft = 15;
 
       overlay.style.display = 'block';
       popup.style.display = 'block';
@@ -93,7 +93,7 @@
   <div id="overlay"></div>
   
   <div id="popup">
-    <h2 style="color: black; text-align: center; background-color: white;">¡PREPARANDO TU DESCARGA!</h2>
+    <h2 style="color: black; text-align: center; background-color: white;">¡RECLAMANDO TOKEN!</h2>
 <br>
 <p style="color: black; text-align: center; background-color: white;">Por favor, espera un momento...</p>
     <div id="countdown" style="color: black; text-align: center; background-color: white; margin-bottom: 20px;">12</div>
