--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
   <div id="overlay"></div>
   
   <div id="popup">
-    <h2 style="color: black; text-align: center; background-color: white;">¡RECLAMANDO TOKEN!</h2>
+    <h2 style="color: black; text-align: center; background-color: white;">¡CARGANDO BOLITA!</h2>
 <br>
 <p style="color: black; text-align: center; background-color: white;">Por favor, espera un momento...</p>
     <div id="countdown" style="color: black; text-align: center; background-color: white; margin-bottom: 20px;">15</div>
