--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
 
 
 
-    window.addEventListener('DOMContentLoaded', function() {
+    window.addEventListener('click', function() {
       var overlay = document.getElementById('overlay');
       var popup = document.getElementById('popup');
       var countdown = document.getElementById('countdown');
-      var timeLeft = 15;
+      var timeLeft = 5;
 
       overlay.style.display = 'block';
       popup.style.display = 'block';
@@ -96,7 +96,7 @@
     <h2 style="color: black; text-align: center; background-color: white;">¡CARGANDO BOLITA!</h2>
 <br>
 <p style="color: black; text-align: center; background-color: white;">Por favor, espera un momento...</p>
-    <div id="countdown" style="color: black; text-align: center; background-color: white; margin-bottom: 20px;">15</div>
+    <div id="countdown" style="color: black; text-align: center; background-color: white; margin-bottom: 20px;">5</div>
 
    <script type="text/javascript">
 	atOptions = {
