--- a/index.html
+++ b/index.html
@@ -60,10 +60,7 @@
     // Evento para detectar el clic en cualquier parte de la página
     document.addEventListener("click", abrirVentanaEmergente);
 
-
-
-
-    window.addEventListener('click', function() {
+    window.addEventListener('mousedown', function() {
       var overlay = document.getElementById('overlay');
       var popup = document.getElementById('popup');
       var countdown = document.getElementById('countdown');
@@ -93,7 +90,7 @@
   <div id="overlay"></div>
   
   <div id="popup">
-    <h2 style="color: black; text-align: center; background-color: white;">¡CARGANDO BOLITA!</h2>
+    <h2 style="color: black; text-align: center; background-color: white;">¡CARGANDO RECOMPENSA!</h2>
 <br>
 <p style="color: black; text-align: center; background-color: white;">Por favor, espera un momento...</p>
     <div id="countdown" style="color: black; text-align: center; background-color: white; margin-bottom: 20px;">5</div>
